# orbital-goodness

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh  main.cpp
render/: main.cpp
